feat: add contributors endpoints and cache
